dnl Process this file with autoconf to produce a configure script
AC_INIT(EO++.h) dnl programa que identifica el directorio

dnl Now check for programs
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_RANLIB

dnl Now with CFLAGS
if test "$CXX" = "c++"; then  
  echo "Using Gnu's C++"
  CFLAGS="-g -Wall"
  export CFLAGS 
else
  echo "Using $CXX"
  CFLAGS="-g"
  export CFLAGS 
fi

dnl Default directory
if test "$prefix" = "NONE"; then  
  echo "Using current directory as install directory"
  prefix=`pwd`
  export prefix
else
  echo "Using $prefix"
  export prefix
fi

AC_SUBST( CFLAGS )
AC_OUTPUT( Makefile util/Makefile apps/examples/Makefile apps/master/Makefile )